# taskwarrior

./: .dockerignore  .pre-commit-config.yaml  CMakeLists.txt  ChangeLog  INSTALL
.github/: dependabot.yml
.github/workflows/: backup.yml  checks.yml  docker-image.yaml  metadata-check.sh  release-check.yaml  security.yml  tests.yaml
doc/devel/contrib/: development.md  (+1 more)
doc/man/: task-sync.5.in  task.1.in  taskrc.5.in
doc/rc/: default.theme  refresh
docker/: task.dockerfile
misc/themes/: run.dark  run.default  run.light  run.solar.dark  run.solar.light
performance/: load  run_perf
scripts/: CMakeLists.txt
scripts/add-ons/: update-holidays.pl
scripts/vim/: README
scripts/vim/ftdetect/: task.vim
scripts/vim/syntax/: taskdata.vim  taskedit.vim
src/: CMakeLists.txt  Context.cpp  Context.h  Eval.h  Lexer.cpp  Operation.h  TDB2.cpp  TDB2.h  Version.cpp  Version.h  ViewTask.cpp  sort.cpp
src/columns/: Column.cpp
src/commands/: CmdCalendar.cpp  CmdColor.cpp  CmdImportV2.h  CmdInfo.cpp  CmdModify.cpp  CmdModify.h  CmdProjects.cpp  CmdShow.cpp  CmdStats.cpp  CmdSummary.cpp  CmdSync.cpp  CmdUndo.h  CmdUrgency.cpp
src/taskchampion-cpp/: CMakeLists.txt  Cargo.toml
src/taskchampion-cpp/src/: lib.rs
test/: CMakeLists.txt  README.md  bash_completion.test.py  calendar.test.py  commands.test.py  dependencies.test.py  feature.559.test.py  make_tc_task.cpp  project.test.py  purge.test.py  random_sort.test.py  read-only.test.py  stats.test.py  tag.test.py  tc_cpp_test.cpp  tempdir.cpp  tempdir.h  tw-1379.test.py  view_test.cpp
test/docker/: debiantesting
