[package]
name = "taskchampion-lib"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.88.0"  # MSRV

[lib]
crate-type = ["staticlib"]

[dependencies]
taskchampion = "=3.0.0"
cxx = "1.0.133"
tokio = { version = "1", features = [ "rt" ] }

[features]
# use native CA roots, instead of bundled
tls-native-roots = ["taskchampion/tls-native-roots"]

[build-dependencies]
cxx-build = "1.0.133"

[dev-dependencies]
tempfile = "3"
